atlantis-hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlantis-hub
  labels:
    app: atlantis-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlantis-hub
  template:
    metadata:
      labels:
        app: atlantis-hub
    spec:
      containers:
        - name: atlantis-hub
          image: registry.services.atlantishq.de/atlantishq/atlantis-hub:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
              httpHeaders:
                - name: X-Auth-Request-Preferred-Username
                  value: probe-user
                - name: X-Auth-Request-Groups
                  value: atlantis-admins,gaming,trackmania,tools,opensearch-admins,show-weblinks
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /app/config.yaml
              subPath: config.yaml
            - name: atlantis-hub-cache-persistor
              mountPath: /app/static/cache
              subPath: cache
            - name: atlantis-hub-cache-persistor
              mountPath: /app/static/instance
              subPath: instance
      volumes:
        - name: config
          configMap:
            name: atlantis-hub-config
            items:
              - key: config.yaml
                path: config.yaml
        - name: atlantis-hub-cache-persistor
          persistentVolumeClaim:
            claimName: atlantis-hub-cache-presistor
      restartPolicy: Always
