atlantis-hub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-hub
  labels:
    app: atlantis-hub
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "sso-oauth2-forward-auth-atlantis-hub@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - portal.services.atlantishq.de
        - portal.atlantishq.de
      secretName: atlantis-hub-tls
  rules:
    - host: portal.services.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlantis-hub
                port:
                  number: 80
    - host: portal.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlantis-hub
                port:
                  number: 80
